removed the hardcoded  active class

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="select-box">
 
-     <div class="options-container active">
+     <div class="options-container">
 
       <div class="option">
         <input type="radio" class="radio" id="automobiles" name="category">
